--- a/puredat-entity.html
+++ b/puredat-entity.html
@@ -178,6 +178,7 @@
 			},
 			
 			keyupHandler: function(event) {
+				this.errorMessage = null;
 				this.$.input.remoteUrl = this.resourceUrl;
 				if (this.$.input.inputValue != null
 						&& this.$.input.inputValue != ""
